--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -28,6 +28,6 @@ main:
     - name: Publications
     url: '#publications'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+  # - name: Contact
+  #   url: '#contact'
+  #   weight: 60
