try to add teaching

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,8 +14,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website.'
-    twitter: 'GetResearchDev'
+    description: 'Bernardo Martin-Iradi's personal website.'
+    twitter: ''
   analytics:
     google_analytics: 'G-X2X9PVVR40'
     baidu_tongji: ''
