--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,7 +14,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Bernardo Martin-Iradi's personal website.'
+    description: 'Personal website of Bernardo Martin-Iradi'
     twitter: ''
   analytics:
     google_analytics: 'G-X2X9PVVR40'
