--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,7 +26,7 @@ main:
   #   url: teaching/
   #   weight: 40
   - name: Publications
-    url: '#publications'
+    url: /#publications
     weight: 50
   - name: Experience
     url: experience/
